loaves/compiler/incan_emit/tests/snapshots/stdlib_generated_rust_snapshot_tests__std_root_prelude_import.snap
---
source: tests/stdlib_generated_rust_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::Debug;
pub use crate::__incan_std::Eq;
pub use crate::__incan_std::Clone;
pub use crate::__incan_std::From;
pub use crate::__incan_std::Add;
pub use crate::__incan_std::Error;
pub use crate::__incan_std::Index;
pub use crate::__incan_std::Callable1;
