loaves/compiler/incan_emit/tests/snapshots/stdlib_generated_rust_snapshot_tests__std_telemetry_prelude_import.snap
---
source: tests/stdlib_generated_rust_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::telemetry::TelemetryValue;
pub use crate::__incan_std::telemetry::Attributes;
pub use crate::__incan_std::telemetry::Resource;
pub use crate::__incan_std::telemetry::InstrumentationScope;
pub use crate::__incan_std::telemetry::SpanContext;
