loaves/compiler/incan_emit/tests/snapshots/stdlib_generated_rust_snapshot_tests__std_web_prelude_import.snap
---
source: tests/stdlib_generated_rust_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use json::{Deserialize as _, Serialize as _};
pub use crate::__incan_std::r#async;
pub use crate::__incan_std::web::App;
pub use crate::__incan_std::web::Json;
pub use crate::__incan_std::web::Html;
pub use crate::__incan_std::web::Response;
pub use crate::__incan_std::web::Query;
pub use crate::__incan_std::web::Path;
pub use crate::__incan_std::web::route;
pub use crate::__incan_std::web::GET;
pub use crate::__incan_std::serde::json;
#[derive(
    ::serde::Serialize,
    ::serde::Deserialize,
    Debug,
    Clone,
    incan_derive::FieldInfo,
    incan_derive::IncanClass
)]
struct Search {
    q: String,
}
impl incan_std_core::reflection::HasClassName for Search {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Search {
    fn __class_name__() -> &'static str {
        "Search"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Search {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Search {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("q"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("q"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Search {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "q" => Some(format!("{}", self.q)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("q".to_string(), format!("{}", self.q))]
    }
}
impl json::Serialize for Search {
    fn to_json(&self) -> String {
        incan_std_data::json::__private::stringify_or_raise(self, stringify!(Search))
    }
}
impl json::Deserialize for Search {
    fn from_json(json_str: String) -> Result<Self, String> {
        incan_std_data::json::__private::parse_or_error(&json_str)
    }
}
#[incan_web_macros::route("/snapshot/{id}", method = "GET")]
async fn snapshot(
    _: Path<i64>,
    query: Query<Search>,
) -> Json<Search> {
    return crate::__incan_std::web::Json(query.0.clone());
}
